add images, first three slides and template WIP
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,2 +1,5 @@
 @import './vendor/normalize.css';
+@import './partials/_variables.scss';
 @import './partials/_main.scss';
+
+@import './partials/_slides.scss';
