--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -18,6 +18,14 @@
 			width: 100%;
 			height: 100%;
 			background: rgba(0, 0, 0, 0.4);
+
+			&.darker {
+				background: rgba(0, 0, 0, 0.6);
+			}
+
+			&.purple {
+				background: rgba(55, 33, 79, 0.6);
+			}
 		}
 	}
 	.inner-frame {
@@ -42,14 +50,20 @@
 		}
 	}
 	.slide-title * {
-		font-size: 60px;
+		// font-size: 60px;
+		font-weight: 200;
 	}
 	.slide-subtitle * {
-		font-size: 24px;
+		font-size: 20px;
+		font-weight: 200;
 		color: rgba(255, 255, 255, 0.75);
 	}
 }
 
 [data-section='0'] {
 	background-color: $purple;
+
+	// .inner-frame {
+	// padding-top: calc(185px + 20vh);
+	// }
 }
