--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -17,7 +17,7 @@
 // elements
 
 hr {
-	border-width: 5px;
+	border-width: 3px;
 	border-color: rgba(255, 255, 255, 0.5);
 
 	&.medium {
@@ -25,8 +25,24 @@ hr {
 		width: 225px;
 	}
 	&.small {
-		margin: 50px 0;
+		margin: 50px 0 30px 0;
 		width: 67px;
+	}
+}
+
+ul.checkmarks {
+	list-style: none;
+	margin-left: 0;
+	li {
+		padding-left: 40px;
+		height: 30px;
+		span {
+			font-size: 20px !important;
+		}
+	}
+	img {
+		margin-left: -40px;
+		margin-right: 20px;
 	}
 }
 
@@ -52,6 +68,10 @@ hr {
 	margin-bottom: 0;
 }
 
+.mb08 {
+	margin-bottom: 8px;
+}
+
 // type
 
 body {
@@ -61,9 +81,52 @@ body {
 	text-transform: uppercase;
 }
 
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+p,
+a {
+	font-family: 'mr-eaves-modern';
+	font-weight: 200;
+	line-height: 1;
+
+	strong {
+		font-weight: 400;
+	}
+}
+
 // TOC
 
+.toc-toggle {
+	cursor: pointer;
+	border-radius: 100%;
+}
+
 #rightSideBar {
+	background: #fff;
+	color: #000;
+	height: 100vh;
+	position: fixed;
+	right: 0;
+	top: 0;
+	transform: translateX(100%);
+	width: 50%;
+	z-index: 10002;
+
+	.toc-open & {
+		box-shadow: rgb(0, 0, 0) 0px 0px 156px 20px;
+	}
+
 	.toc {
 	}
 	.toc-item {
@@ -92,9 +155,34 @@ body {
 	background: #fff;
 
 	padding: 0px 60px;
+	transition: all ease 300ms;
+
+	.drawer-open & {
+		opacity: 0;
+	}
 
 	.home-logo {
 		width: 125px;
+	}
+
+	li a {
+		text-transform: uppercase;
+		color: #000;
+		font-weight: 700;
+		letter-spacing: 0.1em;
+		font-size: 14px;
+	}
+}
+
+// Widgets
+.counter {
+	margin-bottom: 0;
+	font-size: 88px;
+	font-weight: 200;
+
+	label {
+		font-size: 16px;
+		color: #fff;
 	}
 }
 
