add custom anchors
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -34,6 +34,10 @@
 				background: rgba(0, 0, 0, 0.6);
 			}
 
+			&.lighter {
+				background: rgba(0, 0, 0, 0.3);
+			}
+
 			&.purple {
 				background: rgba(55, 33, 79, 0.6);
 			}
