--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -5,6 +5,9 @@
 	object-fit: cover;
 	object-position: center;
 }
+.object-fit.top img {
+	object-position: top center;
+}
 .compat-object-fit {
 	background-size: cover;
 
@@ -80,6 +83,7 @@ ul.checkmarks {
 
 body {
 	font-family: 'mr-eaves-modern';
+	font-size: 20px;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -178,6 +182,10 @@ a {
 	}
 	.toc-title {
 		padding: 10px 50px 10px 10px;
+
+		span {
+			font-size: 21px;
+		}
 	}
 }
 
@@ -210,6 +218,9 @@ a {
 		font-weight: 700;
 		letter-spacing: 0.1em;
 		font-size: 14px;
+	}
+	.menu li {
+		padding: 0 5px;
 	}
 }
 
