--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -53,11 +53,11 @@
 	}
 
 	.slide-title h2 {
-		font-size: 40px;
+		font-size: 5vw;
 		font-weight: 200;
 	}
 	.slide-subtitle h3 {
-		font-size: 20px;
+		font-size: 2.5vw;
 		font-weight: 200;
 		color: rgba(255, 255, 255, 0.75);
 		margin-bottom: 0;
@@ -66,7 +66,7 @@
 
 .drawer-button {
 	cursor: pointer;
-	width: 65px;
+	width: 80px;
 	margin-bottom: 0px;
 
 	&_container {
@@ -125,7 +125,7 @@
 	overflow-y: scroll;
 
 	.drawer-open & {
-		box-shadow: rgb(0, 0, 0) 0px 0px 156px 20px;
+		box-shadow: rgb(0, 0, 0) 0px 0px 156px 0px;
 	}
 
 	.drawer-title {
@@ -151,6 +151,7 @@
 	span,
 	.intro-header {
 		margin: 0;
+		line-height: 1;
 	}
 
 	.flex {
@@ -170,6 +171,7 @@
 	#words {
 		position: relative;
 		display: inline-block;
+		// transform: translateY(-40px);
 		> span {
 			display: none;
 		}
@@ -196,7 +198,9 @@
 		}
 	}
 
-	#orange_dot, #orange_dot2, #orange_dot3  {
+	#orange_dot,
+	#orange_dot2,
+	#orange_dot3 {
 		transform-origin: center center;
 	}
 	#orange_dot2 {
