--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -118,7 +118,7 @@ a {
 .toc-toggle {
 	cursor: pointer;
 	border-radius: 100%;
-	border: 3px solid #000;
+	border: 6px solid #ddd;
 	height: 50px;
 	width: 50px;
 
@@ -126,6 +126,12 @@ a {
 	align-items: center;
 	justify-content: center;
 	&-inner {
+		text-transform: uppercase;
+		font-size: 13px;
+	}
+	.toc-progress {
+		position: absolute;
+		top: 19px;
 	}
 }
 
@@ -239,112 +245,30 @@ a {
 		color: #fff;
 	}
 }
+nav#up-down {
+	position: fixed;
+	right: 30px;
+	top: 0;
+	height: 100vh;
+	z-index: 2;
 
-// .align-right {
-//     -webkit-box-pack: end;
-//     -webkit-justify-content: flex-end;
-//     -ms-flex-pack: end;
-//     justify-content: flex-end
-// }
+	.fp-viewing-intro & {
+		opacity: 0;
+	}
 
-// .align-center {
-//     -webkit-box-pack: center;
-//     -webkit-justify-content: center;
-//     -ms-flex-pack: center;
-//     justify-content: center
-// }
+	img {
+		cursor: pointer;
+		position: fixed;
+		right: 30px;
+		top: 125px;
+		z-index: 2;
+		width: 20px;
+		opacity: 0.4;
 
-// .align-justify {
-//     -webkit-box-pack: justify;
-//     -webkit-justify-content: space-between;
-//     -ms-flex-pack: justify;
-//     justify-content: space-between
-// }
-
-// .align-spaced {
-//     -webkit-justify-content: space-around;
-//     -ms-flex-pack: distribute;
-//     justify-content: space-around
-// }
-
-// .align-right.vertical.menu>li>a {
-//     -webkit-box-pack: end;
-//     -webkit-justify-content: flex-end;
-//     -ms-flex-pack: end;
-//     justify-content: flex-end
-// }
-
-// .align-center.vertical.menu>li>a {
-//     -webkit-box-pack: center;
-//     -webkit-justify-content: center;
-//     -ms-flex-pack: center;
-//     justify-content: center
-// }
-
-// .align-top {
-//     -webkit-box-align: start;
-//     -webkit-align-items: flex-start;
-//     -ms-flex-align: start;
-//     align-items: flex-start
-// }
-
-// .align-self-top {
-//     -webkit-align-self: flex-start;
-//     -ms-flex-item-align: start;
-//     align-self: flex-start
-// }
-
-// .align-bottom {
-//     -webkit-box-align: end;
-//     -webkit-align-items: flex-end;
-//     -ms-flex-align: end;
-//     align-items: flex-end
-// }
-
-// .align-self-bottom {
-//     -webkit-align-self: flex-end;
-//     -ms-flex-item-align: end;
-//     align-self: flex-end
-// }
-
-// .align-middle {
-//     -webkit-box-align: center;
-//     -webkit-align-items: center;
-//     -ms-flex-align: center;
-//     align-items: center
-// }
-
-// .align-self-middle {
-//     -webkit-align-self: center;
-//     -ms-flex-item-align: center;
-//     -ms-grid-row-align: center;
-//     align-self: center
-// }
-
-// .align-stretch {
-//     -webkit-box-align: stretch;
-//     -webkit-align-items: stretch;
-//     -ms-flex-align: stretch;
-//     align-items: stretch
-// }
-
-// .align-self-stretch {
-//     -webkit-align-self: stretch;
-//     -ms-flex-item-align: stretch;
-//     -ms-grid-row-align: stretch;
-//     align-self: stretch
-// }
-
-// .align-center-middle {
-//     -webkit-box-pack: center;
-//     -webkit-justify-content: center;
-//     -ms-flex-pack: center;
-//     justify-content: center;
-//     -webkit-box-align: center;
-//     -webkit-align-items: center;
-//     -ms-flex-align: center;
-//     align-items: center;
-//     -webkit-align-content: center;
-//     -ms-flex-line-pack: center;
-//     align-content: center
-// }
+		&[data-movedown] {
+			transform: rotate(180deg);
+			bottom: 50px;
+			top: initial;
+		}
+	}
+}
