--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -297,3 +297,16 @@
 		cursor: pointer;
 	}
 }
+[data-closedrawer] {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 10001;
+	top: 0;
+	left: 0;
+
+	display: none;
+	.drawer-open & {
+		display: block;
+	}
+}
