--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -1,30 +1,32 @@
-div#header {
-	padding: 0;
+@media screen and (max-width: $medium) {
+	div#header {
+		padding: 0;
 
-	.home img {
-		width: 60px;
-	}
-
-	.menu.simple {
-		position: fixed;
-		height: 400px;
-		display: flex;
-		flex-direction: column;
-		background: white;
-		width: 100vw;
-		left: 0;
-		top: 69px;
-		justify-content: space-evenly;
-
-		li {
-			margin: 0;
+		.home img {
+			width: 60px;
 		}
 
-		transform: translateY(-100%);
-		transition: all 500ms ease;
-		z-index: -1;
-		&.open {
-			transform: translateY(0);
+		.menu.simple {
+			position: fixed;
+			height: 400px;
+			display: flex;
+			flex-direction: column;
+			background: white;
+			width: 100vw;
+			left: 0;
+			top: 69px;
+			justify-content: space-evenly;
+
+			li {
+				margin: 0;
+			}
+
+			transform: translateY(-100%);
+			transition: all 500ms ease;
+			z-index: -1;
+			&.open {
+				transform: translateY(0);
+			}
 		}
 	}
 }
