--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -242,20 +242,16 @@
 	background-color: #cccccc;
 	color: #000;
 
-	// .inner-frame {
-	// padding-top: calc(185px + 20vh);
-	// }
 	hr.medium {
 		border-color: #fff;
 	}
 }
 
-[data-section='1'] {
-	.bg {
-		background: #000;
-	}
-	.fore {
-		transform-origin: bottom center;
+[data-section='2'] {
+	@media screen and (min-width: 768px) {
+		h2 {
+			font-size: 48px !important;
+		}
 	}
 }
 
@@ -344,5 +340,25 @@
 	display: none;
 	.drawer-open & {
 		display: block;
+	}
+}
+
+// parallax
+[data-section='1'] {
+	.fore {
+		transform-origin: bottom center;
+	}
+}
+[data-section='4'] {
+	.fore,
+	.back {
+		transform-origin: bottom left;
+	}
+}
+
+[data-section='10'] {
+	.fore,
+	.back {
+		transform-origin: center center;
 	}
 }
