add Promise loading of all images before parrallax loads
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -354,9 +354,8 @@
                         <span>Photo:</span>Mohammad Magayda/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <!-- <img src="./img/slides/profile-jordan-slide1-original.jpg" alt=""> -->
-                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-bg.jpg" alt="">
-                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-fg.png" alt="">
+                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-bg.jpg" alt="Samira Saeed Mouawwad in a beekeeper suit working with a beehive">
+                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-jordan-slide1-fg.png" alt="Samira Saeed Mouawwad in a beekeeper suit working with a beehive">
                 </div>
                 <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
@@ -385,7 +384,7 @@
                             <h1 class="drawer-title">A beekeeper uses new skills to build a thriving business</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/slides/profile-jordan-drawer-original.jpg" alt="">
+                                    <img src="./img/slides/profile-jordan-drawer-original.jpg" alt="Samira Saeed Mouawwad working with a female mentee to make honey ">
                                 </p>
                                 <p>As a young girl in Jordan, Samira Saeed Mouawwad watched her neighbors tend to their bees
                                     and pull the honey from the hives. Over the years, her interest in beekeeping grew. When
@@ -479,13 +478,14 @@
                         <span>Photo:</span>As Hardworking as a Bee, Dirar Shawagfeh/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="">
+                    <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="Close-up of a beehive ">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 medium-9 large-8 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
-                            <h2>“The focus on small and home-based businesses is giving women the tools they need to become more powerful and independent, and this leads to their greater contribution to the economy.”</h2>
+                            <h2>“The focus on small and home-based businesses is giving women the tools they need to become more
+                                powerful and independent, and this leads to their greater contribution to the economy.”</h2>
                         </div>
                         <div class="cell shrink stagger-in">
                             <hr class="small">
@@ -510,7 +510,7 @@
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-hptn-slide-original.jpg" alt="">
+                    <img src="./img/slides/example-hptn-slide-original.jpg" alt="Close-up of a medical worker doing an HIV finger prick test">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -593,8 +593,8 @@
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
                 </div>
                 <div class="bg object-fit top">
-                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-bg.jpg" alt="">
-                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-fg.png" alt="">
+                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-bg.jpg" alt="Yatin Thakur talking with colleagues inside the CoWorkin office ">
+                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-india-slide1-fg.png" alt="Yatin Thakur talking with colleagues inside the CoWorkin office ">
                 </div>
                 <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
@@ -623,7 +623,7 @@
                             <h1 class="drawer-title">Emerging leaders develop lasting connections</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/drawer/profile-india-drawer-original.jpg" alt="">
+                                    <img src="./img/drawer/profile-india-drawer-original.jpg" alt="Yatin Thakur inside his CoWorkin office space ">
                                 </p>
                                 <p>Yatin Thakur is a young Indian “serial entrepreneur” with big ambitions. Just 30 years old,
                                     he has already founded Startup India Advisory, a collective aimed at fostering entrepreneurship,
@@ -714,13 +714,14 @@
                         <span>Photo:</span>Vivek Singh/The Verbatim Agency for FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-india-slide2-original.jpg" alt="">
+                    <img src="./img/slides/profile-india-slide2-original.jpg" alt="A busy public square in New Delhi, India">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 large-8 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
-                            <h2>“My exposure to the U.S. environment showed me how to bring in the right people to work to achieve scale.”</h2>
+                            <h2>“My exposure to the U.S. environment showed me how to bring in the right people to work to achieve
+                                scale.”</h2>
                         </div>
                         <div class="cell shrink stagger-in">
                             <hr class="small">
@@ -745,7 +746,7 @@
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="">
+                    <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="A woman smiling and holding her sleeping infant">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -834,7 +835,7 @@
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-succeed2020-slide1-original.jpg" alt="">
+                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-succeed2020-slide1-original.jpg" alt="Jennifer Carlson standing in a school hallway">
                 </div>
                 <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
@@ -863,7 +864,7 @@
                             <h1 class="drawer-title">Data drives student success in America’s heartland</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/drawer/profile-succeed2020-drawer-original.jpg" alt="">
+                                    <img src="./img/drawer/profile-succeed2020-drawer-original.jpg" alt="A teacher and a student looking at a laptop computer">
                                 </p>
                                 <p>The Succeed 2020 project had a bold and ambitious goal: Support all North Dakota students
                                     to successfully transition from school to college and 21st century careers.
@@ -963,13 +964,14 @@
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-succeed2020-slide2-original.jpg" alt="">
+                    <img src="./img/slides/profile-succeed2020-slide2-original.jpg" alt="Grain silos during a winter sunset in Devil’s Lake, North Dakota">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 large-9 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
-                            <h2>“We’ve increased our organizational capacities, including our in-house education data system. Data is part of our culture now.”</h2>
+                            <h2>“We’ve increased our organizational capacities, including our in-house education data system.
+                                Data is part of our culture now.”</h2>
                         </div>
                         <div class="cell shrink stagger-in">
                             <hr class="small">
@@ -994,7 +996,7 @@
                         <span>Photo:</span>Jessica Scranton/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-tb-slide-original.jpg" alt="">
+                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-tb-slide-original.jpg" alt="An older couple in Mozambique smiling with their arms around each other">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -1006,7 +1008,8 @@
                             <hr class="invisible">
                         </div>
                         <div class="cell shrink slide-subtitle stagger-in">
-                            <h3>In some provinces, TB detection <br>through CB-DOTS has increased to</h3>
+                            <h3>In some provinces, TB detection
+                                <br>through CB-DOTS has increased to</h3>
                         </div>
                         <div class="grid-x align-middle stagger-in">
                             <div class="cell shrink" style="padding-right: 20px;">
@@ -1094,8 +1097,8 @@
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-bg.jpg" alt="">
-                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-fg.png" alt="">
+                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-bg.jpg" alt="Obey Assery standing in front of the Tanzanian flag">
+                    <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-fg.png" alt="Obey Assery standing in front of the Tanzanian flag">
                 </div>
                 <div class="bg-screen black"></div>
                 <div class="grid-x inner-frame">
@@ -1220,7 +1223,7 @@
                         <span>Photo:</span>Maxiphoto/iStockPhoto</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-myanmar-slide-original.jpg" alt="">
+                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-myanmar-slide-original.jpg" alt="Crowd of people walking in a street market of Yangon, Myanmar">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -1326,7 +1329,7 @@
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide1-original.jpg" alt="">
+                    <img class="back" data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide1-original.jpg" alt="A group of students and Dean Yosouf Jami inside the food technology lab at Herat University">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -1355,7 +1358,7 @@
                             <h1 class="drawer-title">University degree program prepares Afghan students for tomorrow’s jobs</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/drawer/profile-afghanistan-drawer-original.jpg" alt="">
+                                    <img src="./img/drawer/profile-afghanistan-drawer-original.jpg" alt="Three female students filling a test tube inside the food technology lab at Herat University">
                                 </p>
                                 <p>Decades-long conflict has stunted economic growth and development in Afghanistan. To rebuild
                                     their country and fully participate in its workforce, Afghans need access to quality
@@ -1456,7 +1459,7 @@
                         <span>Photo:</span>Kiana Hayeri/The Verbatim Agency for FHI 360</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide2-original.jpg" alt="">
+                    <img data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide2-original.jpg" alt="The exterior of Herat University in Afghanistan, with female students walking towards the building">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -1489,7 +1492,7 @@
                         <span>Photo:</span>John O'Bryan/USAID (CC BY-ND 2.0)</h6>
                 </div>
                 <div class="bg object-fit">
-                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-mstar-slide-original.jpg" alt="">
+                    <img data-src="http://sean-harrington.com/ar2018/img/slides/example-mstar-slide-original.jpg" alt="A woman making mobile money transactions">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
