Fit Obeys face to top
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.hbs
+++ b/index.hbs
@@ -1014,7 +1014,7 @@
                     <h6>
                         <span>Photo:</span>Leanne Gray/FHI 360</h6>
                 </div>
-                <div class="bg object-fit">
+                <div class="bg object-fit top">
                     <img class="back" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-bg.jpg" alt="Obey Assery standing in front of the Tanzanian flag">
                     <img class="fore" data-src="http://sean-harrington.com/ar2018/img/layers/profile-tanzania-slide-fg.png" alt="Obey Assery standing in front of the Tanzanian flag">
                 </div>
@@ -1379,7 +1379,7 @@
                 <div class="bg object-fit">
                     <img data-src="http://sean-harrington.com/ar2018/img/slides/profile-afghanistan-slide2-original.jpg" alt="The exterior of Herat University in Afghanistan, with female students walking towards the building">
                 </div>
-                <div class="bg-screen purple"></div>
+                <div class="bg-screen dark"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in grid-x">
@@ -1501,7 +1501,9 @@
                 <div class="grid-y align-center" style="height: 100vh;">
                     <div class="cell auto medium-9 grid-x p2">
                         <div class="small-12 large-6 cell grid-y align-center align-middle" style="border-right: 1px solid #ddd;">
-                            <h2 class="uppercase">Learn more</h2>
+                            <a href="https://www.fhi360.org/" target="_blank">
+                                <h2 class="uppercase">Learn more</h2>
+                            </a>
                             <p class="p0 h4">Read about FHI 360 and our work</p>
                         </div>
                         <div class="small-12 large-6 cell grid-y align-center align-middle">
