IE11 - fix up-down button placement
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -271,7 +271,7 @@ nav#up-down {
 		&[data-movedown] {
 			transform: rotate(180deg);
 			bottom: 50px;
-			top: initial;
+			top: auto;
 		}
 	}
 }
